--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -17,8 +17,8 @@ on:
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ main, develop ]
-  schedule:
-    - cron: '38 0 * * 5'
+#   schedule:
+#     - cron: '38 0 * * 5'
 
 env:
   # Conan cache environment variables
